--- a/index.html
+++ b/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE HTML>
+<!doctype html>
 <html>
     <head>
-        <meta charset="UTF8"> 
-        <title> Hi </title>
+        <title> UNES - Página Inicial </title>
+        <meta charset="utf-8">
     </head>
     <body>
-        <h1>Hello World!</h1>
+
+        <table border="1" Width="900" align="Center">
+
+            <tr>
+                <td>Logo</td>
+                <td>Menu</td>
+            </tr>
+
+        </table>
+
     </body>
 </html>
