AtualizaçãoIndex e inclusão de demais páginas

--- a/index.html
+++ b/index.html
@@ -4,13 +4,49 @@
         <title> UNES - Página Inicial </title>
         <meta charset="utf-8">
     </head>
-    <body>
+    <body background="imagens/fundo.png">
 
-        <table border="1" Width="900" align="Center">
+        <table border="0" Width="900" align="Center">
 
             <tr>
-                <td>Logo</td>
-                <td>Menu</td>
+                <td height="89"> <img src="imagens/logo.png"> </td>
+                <td align="right">
+                    <a href="index.html">Home</a> | 
+                    <a href="quemSomos.html">Quem somos</a> | 
+                    <a href="contato.html">Contato</a> 
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center"> <img src="imagens/capa.png"> </td>
+            </tr>
+            <tr>
+                <td colspan="2"> 
+                <h2>Sobre a Universidade</h2>
+                
+                <p>
+                    Lorem ipsum <strong>dolor sit amet</strong> consectetur adipisicing elit. 
+                    Quasi, omnis fugiat dignissimos sint alias quas et maiores nulla atque inventore possimus,
+                    quo nihil reiciendis nesciunt quae sapiente facere libero sunt!
+                    Lorem ipsum dolor sit amet <em>consectetur</em> adipisicing elit. 
+                    Quasi, omnis fugiat dignissimos sint alias quas et maiores nulla atque inventore possimus,
+                    quo nihil reiciendis nesciunt quae sapiente facere libero sunt!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quasi, omnis fugiat dignissimos sint alias quas et maiores nulla atque inventore possimus,
+                    quo nihil reiciendis nesciunt quae sapiente facere libero sunt!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Quasi, omnis fugiat dignissimos sint alias quas et maiores nulla atque inventore possimus,
+                    quo nihil reiciendis nesciunt quae sapiente facere libero sunt!                
+                </p>     
+                </td>
+            </tr>
+            <tr>
+                <td colspan="2" align="center">
+                    <h4>
+                        <strong>
+                            Todos os direitos Reservados © 2021
+                        </strong>
+                    </h4>
+                </td>
             </tr>
 
         </table>
